output/quantumwn_p5_25_124/foundry_validation/F-001_Unchecked_ERC20_return_values_can_mint_u/forge_stdout_attempt2.log
Compiler run failed:
Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0xC0AEe478e3658e2610c5F7A4A2E1777cE9e4f2Ac". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0xC0AEe478e3658e2610c5F7A4A2E1777cE9e4f2Ac". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
  --> src/FlawVerifier.sol:48:50:
   |
48 |     address private constant SUSHISWAP_FACTORY = 0xC0AEe478e3658e2610c5F7A4A2E1777ce9e4f2Ac;
   |                                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

